# syncthing-gtk

./: .gitignore  README.md  build_windows.py  chocolatey_update.py  generate-icons.sh  generate-locales.sh  generate-source-locale.sh  me.kozec.syncthingtk.appdata.xml  meson.build  org.syncthing-gtk.syncthing-gtk.appdata.xml  pyproject.toml  setup.py  syncthing-gtk.nsis  syncthing-gtk.py
.github/workflows/: appimage_build.yml  build_flatpak.yml  flatpak_build.yml  flatpak_update.yml  pylint.yml  update_flatpak.yml  windows_msi_build.yml
debian/: changelog  clean  control  copyright  rules  watch
debian/upstream/: metadata
doc/: meson.build
glade/: app.glade  ui-settings.glade
icons/: generate_icons.py  meson.build
locale/: LINGUAS  cs.po  de.po  en.po  es.po  hu.po  lt.po  pl.po  ru.po  sk.po  syncthing-gtk.pot  vi.po  zh_CN.po
packaging/: meson.build
packaging/appimage/: AppImageBuilder.yml  appimage-build.sh  build_appimage.sh
packaging/debian/: clean  control  rules  watch
packaging/debian/upstream/: metadata
packaging/fedora/: syncthing-gtk.spec
packaging/flatpak/: bcrypt-cargo-sources.json  cryptography-cargo-sources.json  net.syncthing.syncthing.yaml  org.syncthing-gtk.syncthing-gtk.yml  python3-cargo-sources.yaml  python3-requirements.json  requirements.txt  syncthing-go-sources.json  syncthing.yaml  update_sources.sh
packaging/windows/: build_msi.sh  chocolatey_update.py  meson.build  syncthing-gtk.nsis  syncthing-gtk.wxs.in  txt2rtf.sh
packaging/windows_nsis/: build_windows.py  syncthing-gtk-exe.spec
plugins/: meson.build  syncthing-plugin-caja.py  syncthing-plugin-nautilus.py  syncthing-plugin-nemo.py
po/: POTFILES  de.po  en.po  es.po  fr.po  hu.po  it.po  lt.po  nl.po  pt.po  ru.po  sk.po  syncthing-gtk.pot  zh_CN.po
scripts/: appimage-AppRun.sh  syncthing-gtk  syncthing-gtk-exe.py  syncthing-plugin-caja.py  syncthing-plugin-nautilus.py  syncthing-plugin-nemo.py
syncthing_gtk/: __init__.py  aboutdialog.py  app.py  configuration.py  daemon.py  daemonoutputdialog.py  daemonprocess.py  daemonsettings.py  deviceeditor.py  editordialog.py  fakerevealer.py  finddaemondialog.py  foldereditor.py  http.py  iddialog.py  identicon.py  ignoreeditor.py  infobox.py  main.py  meson.build  nautilusplugin.py  notifications.py  ribar.py  statusicon.py  stdownloader.py  stignoreparser.py  timermanager.py  tools.py  uibuilder.py  uisettingsdialog.py  windows.py  wizard.py
syncthing_gtk/glade/: meson.build  ui-settings.glade
syncthing_gtk/icons/: generate_icons.py
syncthing_gtk/locale/: POTFILES  fr.po  it.po  meson.build  nl.po  pt.po
syncthing_gtk/plugins/: syncthing-plugin-caja.py  syncthing-plugin-nautilus.py  syncthing-plugin-nemo.py
ui/: about.ui  app.ui  daemon-output.ui  daemon-settings.ui  device-edit.ui  device-id.ui  find-daemon.ui  folder-edit.ui  ignore-editor.ui  meson.build  styles.css  ui-settings.ui
