python.install_sources(
    '__init__.py',
    'aboutdialog.py',
    'app.py',
    'configuration.py',
    'daemon.py',
    'daemonoutputdialog.py',
    'daemonprocess.py',
    'daemonsettings.py',
    'deviceeditor.py',
    'editordialog.py',
    'fakerevealer.py',
    'finddaemondialog.py',
    'foldereditor.py',
    'http.py',
    'iddialog.py',
    'identicon.py',
    'ignoreeditor.py',
    'infobox.py',
    'nautilusplugin.py',
    'notifications.py',
    'ribar.py',
    'statusicon.py',
    'stdownloader.py',
    'timermanager.py',
    'tools.py',
    'uibuilder.py',
    'uisettingsdialog.py',
    'windows.py',
    'wizard.py',
    subdir: python_module_name
)
